--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ button:hover {
     height: 300px;
     border: 2px solid #ccc;
     margin-bottom: 20px;
+    gap: 10px;
 }
 
 .flex-item {
@@ -52,13 +53,13 @@ button:hover {
 }
 
 .flex-item:nth-child(1) {
-    background-color: #ff6347; /* Tomato */
+    background-color: #ff6347;
 }
 
 .flex-item:nth-child(2) {
-    background-color: #4682b4; /* SteelBlue */
+    background-color: #4682b4;
 }
 
 .flex-item:nth-child(3) {
-    background-color: #3cb371; /* MediumSeaGreen */
+    background-color: #3cb371;
 }
