--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     padding: 20px;
     background-color: #f0f2f5;
+    
 }
 
 .controls {
@@ -14,11 +15,11 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    max-width: 600px;
+    max-width: 1840px;
     background-color: white;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    
 }
 
 .control-group {
@@ -27,6 +28,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    
 }
 
 .control-group label {
@@ -37,16 +39,14 @@ body {
 button {
     margin: 5px;
     padding: 10px 15px;
-    border: none;
-    background-color: #007BFF;
+    background-color: #000000;
     color: white;
-    cursor: pointer;
     font-size: 14px;
     border-radius: 5px;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #4a4b4d;
 }
 
 input {
@@ -59,15 +59,13 @@ input {
 
 .flex-container {
     display: flex;
-    width: 80%;
-    max-width: 600px;
-    height: 150px;
-    border: 2px solid #ccc;
+    width: 100%;
+    max-width: 2000px;
+    height: 250px;
     margin-bottom: 20px;
     gap: 10px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     padding: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     overflow: auto;
 }
@@ -85,21 +83,21 @@ input {
 }
 
 .flex-item:nth-child(1) {
-    background-color: #ff6347;
+    background-color: #ff0000;
 }
 
 .flex-item:nth-child(2) {
-    background-color: #4682b4;
+    background-color: #ff7b00;
 }
 
 .flex-item:nth-child(3) {
-    background-color: #3cb371;
+    background-color: #ffae00;
 }
 
 .reset-button {
-    background-color: #ff6347;
+    background-color: #000000;
 }
 
 .reset-button:hover {
-    background-color: #cc5134;
+    background-color: #4a4b4d;
 }
