--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,16 @@ body {
 }
 
 .controls {
-    margin-top: 20px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     width: 100%;
-    max-width: 1840px;
-    background-color: white;
-    padding: 20px;
+    max-width: 1500px;
+    height: 350px;
+    margin-bottom: 20px;
+    gap: 10px;
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
     border-radius: 10px;
+    overflow: auto;
     
 }
 
@@ -60,7 +61,7 @@ input {
 .flex-container {
     display: flex;
     width: 100%;
-    max-width: 2000px;
+    max-width: 1500px;
     height: 250px;
     margin-bottom: 20px;
     gap: 10px;
@@ -92,6 +93,16 @@ input {
 
 .flex-item:nth-child(3) {
     background-color: #ffae00;
+}
+
+.reset-button {
+    height: 40px;
+    margin: 5px;
+    padding: 10px 15px;
+    background-color: #000000;
+    color: white;
+    font-size: 14px;
+    border-radius: 5px;
 }
 
 .reset-button {
